re-ordenamiento de codigo

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 FIREBASE_API_KEY=AIzaSyBG_aWqPFVfmnqW4mzZtfPOINXJWvUavW8
 FIREBASE_AUTH_DOMAIN=proyecto-final-cbf7e.firebaseapp.com
+FIREBASE_PROJECT_ID=proyecto-final-cbf7e
 FIREBASE_STORAGE_BUCKET=proyecto-final-cbf7e.firebasestorage.app
+FIREBASE_MESSAGING_SENDER_ID=700068824428
 FIREBASE_APP_ID=1:700068824428:web:5e4380ac4af77ecd08df49
+FIREBASE_MEASUREMENT_ID=G-RFJ7BGBBSH
