se implementa y se genera un html muy basico

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ FIREBASE_STORAGE_BUCKET=proyecto-final-cbf7e.firebasestorage.app
 FIREBASE_MESSAGING_SENDER_ID=700068824428
 FIREBASE_APP_ID=1:700068824428:web:5e4380ac4af77ecd08df49
 FIREBASE_MEASUREMENT_ID=G-RFJ7BGBBSH
+JWT_SECRET=supersecretkey
